# kidsweather

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  GUIDELINES.md  README.md  api_client.py  app.py  cache_provider.py  config.py  debug_context.py  deploy-dryrun.sh  deploy.sh  llm_client.py  models.py  output.html  pyproject.toml  replay.py  requirements.txt  sendit.sh  settings.py  test_weather_processor.py  utils.py  weather_cli.py  weather_client.py  weather_formatter.py  weather_processor.py  weather_service.py
docs/: openweathermap_api_response.txt
instructions/: base.txt
kidsweather/: __main__.py  main.py
kidsweather/clients/: llm.py  weather.py
kidsweather/core/: service.py  settings.py
kidsweather/formatting/: html.py
kidsweather/infrastructure/: cache.py  logging.py
kidsweather/prompts/: default.txt
kidsweather/templates/: weather.html
kidsweather/tests/: test_integration.py
kidsweather/utils/: file_utils.py
kidsweather/web/: app.py
kidsweather/web/templates/: weather.html
prompts/: ant.txt  ant2.txt  bluey.txt  default.txt  prompt.txt  test.txt
scripts/: start_and_screenshot.sh
templates/: weather.html
test_data/: dc1.json  dc2.json  dc3.json  dc4.json  dc5.json  dcalert.json  example.json  nyc.json  test.json
